--- a/homework/Day_004_HW.ipynb
+++ b/homework/Day_004_HW.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -17,18 +17,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "z4iLB9cKVblV"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "./data/application_train.csv\n",
+      "./data/application_train.csv\n",
+      "D:\\Download\\MLMarathon\\2nd-ML100Days\\homework\\data\\application_train.csv\n"
+     ]
+    }
+   ],
    "source": [
     "# 設定 data_path, 並讀取 app_train\n",
     "dir_data = './data/'\n",
     "f_app_train = os.path.join(dir_data, 'application_train.csv')\n",
-    "app_train = pd.read_csv(f_app_train)"
+    "print(f_app_train)\n",
+    "f_app_train = os.path.join('./data/', 'application_train.csv')\n",
+    "print(f_app_train)\n",
+    "#app_train = pd.read_csv(f_app_train)\n",
+    "data_abspath = os.path.abspath(f_app_train)\n",
+    "print(data_abspath)"
    ]
   },
   {
