--- a/homework/Day66-Keras_Introduction_HW.ipynb
+++ b/homework/Day66-Keras_Introduction_HW.ipynb
@@ -93,10 +93,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'float16'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#設定浮點運算值\n",
+    "K.set_floatx('float16')\n",
+    "K.floatx()"
+   ]
   }
  ],
  "metadata": {
